build_log.txt
> Task :neoFormListLibraries UP-TO-DATE
> Task :cacheVersionManifest1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.1 UP-TO-DATE
> Task :cacheVersionExtractedServer1.21.1 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.1 UP-TO-DATE
> Task :create1.21.1ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.1_client-extra UP-TO-DATE
> Task :neoFormListTransformLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormTransformSource UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.1-20240808.144430 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.1.217 UP-TO-DATE

> Task :compileJava FAILED
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:20: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = RPGEasyMode.MODID, bus = EventBusSubscriber.Bus.GAME)
                                               ^
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:20: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = RPGEasyMode.MODID, bus = EventBusSubscriber.Bus.GAME)
                                                                       ^
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:28: error: cannot find symbol
            if (player.hasEffect(ModMobEffects.BOUNDLESS_GRACE.get())) {
                                                              ^
  symbol:   method get()
  location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:36: error: cannot find symbol
                player.removeEffect(ModMobEffects.BOUNDLESS_GRACE.get());
                                                                 ^
  symbol:   method get()
  location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\item\SequentialInfinitePotion.java:81: error: cannot find symbol
            if (instance.getEffect().getCategory() == net.minecraft.world.effect.MobEffectCategory.HARMFUL) {
                                    ^
  symbol:   method getCategory()
  location: interface Holder<MobEffect>
D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\item\SequentialInfinitePotion.java:211: error: cannot find symbol
            player.addEffect(new MobEffectInstance(ModMobEffects.BOUNDLESS_GRACE.get(), 1200, 0)); // 60s
                                                                                ^
  symbol:   method get()
  location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
4 errors
2 warnings

[Incubating] Problems report is available at: file:///D:/neoforge-bokkchoy/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:20: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
  @EventBusSubscriber(modid = RPGEasyMode.MODID, bus = EventBusSubscriber.Bus.GAME)
                                                 ^
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:20: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
  @EventBusSubscriber(modid = RPGEasyMode.MODID, bus = EventBusSubscriber.Bus.GAME)
                                                                         ^
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:28: error: cannot find symbol
              if (player.hasEffect(ModMobEffects.BOUNDLESS_GRACE.get())) {
                                                                ^
    symbol:   method get()
    location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\event\ModEvents.java:36: error: cannot find symbol
                  player.removeEffect(ModMobEffects.BOUNDLESS_GRACE.get());
                                                                   ^
    symbol:   method get()
    location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\item\SequentialInfinitePotion.java:81: error: cannot find symbol
              if (instance.getEffect().getCategory() == net.minecraft.world.effect.MobEffectCategory.HARMFUL) {
                                      ^
    symbol:   method getCategory()
    location: interface Holder<MobEffect>
  D:\neoforge-bokkchoy\src\main\java\net\kankrittapon\rpgem\item\SequentialInfinitePotion.java:211: error: cannot find symbol
              player.addEffect(new MobEffectInstance(ModMobEffects.BOUNDLESS_GRACE.get(), 1200, 0)); // 60s
                                                                                  ^
    symbol:   method get()
    location: variable BOUNDLESS_GRACE of type Holder<MobEffect>
  4 errors
  2 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
23 actionable tasks: 1 executed, 22 up-to-date
